<resources>
    <string name="app_name">Sp_pen</string>
    <string name="welcome_to_scanning_pens">Welcome\nto\nScanning Pens</string>
    <string name="loading">Loading</string>
    <!-- Strings used for fragments for navigation -->
    <string name="hint_email">Email</string>
    <string name="hint_title">Title</string>
    <string name="text_login">Login</string>
    <string name="text_name">First Name</string>
    <string name="text_lastname">Last Name</string>
    <string name="text_pass">Password</string>
    <string name="text_cnfpass">Confirm Password</string>
    <string name="text_Passcode">Passcode</string>
    <string name="text_Orgcode">Organisation Code</string>
    <string name="text_Mobile">Mobile</string>
    <string name="text_address">Address</string>

    <string name="text_register">Not Registered Yet ?   </string>
    <string name="text_reg">Register Now</string>
    <string name="text_cr">Create</string>
    <string name="logo">logo</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="org_acc">Organisation\nAccount</string>
    <string name="ind_acc">Individual\nAccount</string>


    <string name="text_title">Title</string>
    <string name="org_name">Organisation Name</string>
    <string name="create_org">Create Organisation</string>
    <string name="create_upin">Create Unlock pin</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="archive">Archive</string>
    <string name="Invite">Invite</string>
    <string name="cr_tag">Create Tag</string>

    <string name="open">Open</string>
    <string name="close">Close</string>


    <string-array name="brew_array">
        <item>Select Type</item>
        <item>Owner</item>
        <item>Admin</item>
    </string-array>

    <string-array name="color_tagpen">
        <item>Orange</item>
        <item>Blue</item>
        <item>Green</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_pen">AddPenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="warranties">Warranties</string>
    <string name="my_acc">My Account</string>
    <string name="org">Organisation</string>
    <string name="settings">Settings</string>
    <string name="reports">Reports</string>
    <string name="view_arc">View Archives</string>
    <string name="invite">Invite</string>
    <string name="select_pen">Select Pen</string>
    <string name="select_color">Select Color</string>
    <string name="description">Description</string>
    <string name="create_tag">Create Tag</string>
    <string name="cancel">Cancel</string>
    <string name="tag_name">Tag Name</string>


    <string name="error_message">Enter Value</string>
    <string name="F_name">First Name</string>
    <string name="text_DOB">DOB</string>
    <string name="f_lang">First Language</string>
    <string name="t_lang">Translation language</string>
    <string name="image">Image</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="don_t_specify">Don\'t specify</string>
    <string name="firstName">First Name</string>
    <string name="Admin_pre_permission">Admin Pre Permissions</string>

    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="error_message_email">Please enter valid email</string>
    <string name="error_message_email_empty">Please enter email</string>

    <string name="error_message_orgname_empty">Please enter Organisation name</string>
    <string name="error_message_title_empty">Please enter Title</string>
    <string name="error_title_dot">Dot isn\'t allowed</string>

    <string name="error_message_fname_empty">Please enter First name</string>
    <string name="error_message_lname_empty">Please enter Last name</string>
    <string name="error_message_gender_empty">Please select Gender</string>
    <string name="error_message_passcode_empty">Please enter Passcode</string>
    <string name="error_message_type_empty">Please enter Type</string>
    <string name="error_message_orgcode_empty">Please enter Organisation code</string>
    <string name="error_message_password">Please enter Password</string>
    <string name="error_message_password_not_match">Password not matched</string>
    <string name="error_message_password_length">Password too weak</string>

    <string name="error_message_serialNumber">Enter Serial Number</string>


    <string name="pens">Pens</string>
    <string name="student">Student</string>
    <string name="admin">Admin</string>
    <string name="invite_admin_text">An email would be sent to this email address allowing them access to the organisation and access to the accounts of all the students.</string>
    <string name="Exit">Exit</string>
</resources>