<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_acc_s_menu"
            android:enabled="true"
            android:icon="@drawable/battery"
            android:title="@string/my_acc" />

        <item
            android:id="@+id/org_s_menu"
            android:icon="@drawable/org"
            android:title="@string/org" />

        <item
            android:id="@+id/set_s_menu"
            android:icon="@drawable/icons8_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/war_s_menu"
            android:icon="@drawable/warranty"
            android:title="@string/warranties" />

        <item
            android:id="@+id/report_s_menu"
            android:icon="@drawable/report"
            android:title="@string/reports" />

        <item
            android:id="@+id/arc_s_menu"
            android:icon="@drawable/icons8_archive"
            android:title="@string/view_arc" />

    </group>

</menu>