<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_add"
            android:enabled="true"
            android:icon="@drawable/icons8_settings"
            android:title="@string/add"
            android:color="#FFFFFF"
            android:tint="#FFFFFF"
            android:backgroundTint="#FFFFFF" />

        <item
            android:id="@+id/navigation_delete"
            android:enabled="true"
            android:iconTint="@color/textColor"
            android:icon="@drawable/icons8_settings"
            android:title="@string/delete" />

        <item
            android:id="@+id/create_tag"
            android:enabled="true"
            android:iconTint="@color/textColor"
            android:icon="@drawable/icons8_settings"
            android:title="@string/cr_tag" />

        <item
            android:id="@+id/navigation_invite"
            android:enabled="true"
            android:iconTint="@color/textColor"
            android:icon="@drawable/icons8_settings"
            android:title="@string/invite"
            android:visible="false" />

    </group>
</menu>