<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudentActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:id="@+id/linear_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutfName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                app:boxBackgroundColor="@color/textColor"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextfName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/purple_700" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutLName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                app:boxBackgroundColor="@color/textColor"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextLName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_lastname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/purple_700" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDOB"
            android:layout_width="match_parent"
            app:boxBackgroundColor="@color/textColor"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_DOB"

                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date"
                android:maxLines="1"
                android:textColor="@color/purple_700" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutflang"
            android:layout_width="match_parent"
            app:boxBackgroundColor="@color/textColor"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextflang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/f_lang"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/purple_700" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayouttlang"
            android:layout_width="match_parent"
            app:boxBackgroundColor="@color/textColor"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTexttlang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/t_lang"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/purple_700" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/textColor"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPassc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_Passcode"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="4"
                android:textColor="@color/purple_700" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/gentext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gentext">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:text="@string/male"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:checked="false"
                    android:text="@string/female"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioOthers"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:checked="false"
                    android:gravity="center"
                    android:text="@string/others"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioDNS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:layout_marginStart="2dp"
                    android:text="@string/don_t_specify"
                    android:textSize="16sp" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/textColor"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/image"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/purple_700" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear3"
            tools:layout_editor_absoluteX="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/appCompatButtonCancelStudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="@color/textColor"
                android:background="@drawable/rounded_corner"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/cancel"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/t1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </Space>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/appCompatButtonAddStudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/rounded_corner"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/add"
                android:textColor="@color/textColor"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/t1" />

        </LinearLayout>



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>